conexion string comentado

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cnConexion" : "Data Source=server;Initial Catalog=PRUEBASMADD;user id=MADD;password=opa123" 
+  }
 }
